[project]
name = "walmart-m5"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "darts>=0.25.0",
    "ipykernel>=7.2.0",
    "joblib>=1.3",
    "matplotlib>=3.8",
    "mlflow>=2.7.0",
    "numpy>=1.26",
    "pandas>=2.0",
    "pmdarima>=2.1.1",
    "rich>=13.0",
    "scikit-learn>=1.4",
    "scipy>=1.12",
    "seaborn>=0.13",
    "statsforecast>=0.4.0",
    "statsmodels>=0.14",
    "streamlit>=1.35",
    "tbats>=1.1.3",
]
